# lumina-tasks

./: .env  Cargo.toml  Dockerfile  README.md  fly.toml  testi.txt  testi.txt.pub
lumina-frontend/: package-lock.json  package.json
lumina-frontend/src/: App.css  App.js
src/: error.rs  lib.rs  main.rs
src/db/: mod.rs
src/handlers/: mod.rs
src/models/: mod.rs
