[package]
name = "lumina-tasks"
version = "0.1.0"
edition = "2024"

[dependencies]

tokio = "1.52.0"
chrono = { version = "0.4.44", features = ["serde"] }
axum = "0.8.9"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio-rustls"] }
serde = "1.0.228"
serde_json = "1.0.149"
dotenv = "0.15.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
anyhow = "1.0.102"
thiserror = "2.0.18"
uuid = "1.23.1"
tower-http = { version = "0.6.8", features = ["cors"] }
tower = "0.5.3"
